--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: CI/CD React App
+name: CICD-First App
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 24
+          node-version: 22
 
       - name: Install dependencies
         run: npm ci
@@ -34,8 +34,8 @@ jobs:
       # Configure Git identity
       - name: Configure Git
         run: |
-          git config --global user.name "drkpn"
-          git config --global user.email "drkpn2019@gmail.com"
+          git config --global user.name "RaviKumarNerusu"
+          git config --global user.email "2300033344cse@gmail.com"
 
       # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
